# cloudflare-auto

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: lib.rs  main.rs
src/api/: handlers.rs  mod.rs  routes.rs
src/config/: database.rs
src/services/: cloudflare.rs  config_service.rs  mod.rs  monitor_service.rs
src/utils/: logger.rs  mod.rs  network.rs
static/: index.html
static/css/: style.css
static/js/: app.js
